# genexec

./: CMakeLists.txt  hello.cpp  nthfibonacci.cpp
.github/workflows/: CPBuilder.yaml
